read org level ftest function

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -13,6 +13,7 @@
     <title>Создания заявки на получение полномочий</title>
     <link rel="stylesheet" type="text/css" href="css/style.css" />
 
+    <!-- sapui5 bootstrap заменить на локальную библиотеку при prod -->
     <script
       id="sap-ui-bootstrap"
       src="https://sapui5.hana.ondemand.com/1.71.70/resources/sap-ui-core.js"
